--- a/pdns/dnsdistdist/Makefile.am
+++ b/pdns/dnsdistdist/Makefile.am
@@ -75,6 +75,7 @@ dnsdist_SOURCES = \
 	dnsdist-console.cc \
 	dnsdist-dnscrypt.cc \
 	dnsdist-ecs.cc dnsdist-ecs.hh \
+	dnsdist-lrucache.cc dnsdist-lrucache.hh \
 	dnsdist-lua.hh dnsdist-lua.cc \
 	dnsdist-lua2.cc \
 	dnsdist-protobuf.cc dnsdist-protobuf.hh \
@@ -115,7 +116,8 @@ dnsdist_SOURCES = \
 dnsdist_LDFLAGS = \
 	$(AM_LDFLAGS) \
 	$(PROGRAM_LDFLAGS) \
-	-pthread 
+	-pthread \
+	-lcdb
 
 dnsdist_LDADD = \
 	$(LUA_LIBS) \
